k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yeelo-homeopathy
  labels:
    name: yeelo-homeopathy
    app: homeopathy-business-platform
